Release 1.2.1 (#54)
* #1 Remove users field from subtenant object
#2 Change enum storage_policy from STANDARD to STANDARD_W1, STANDARD_W2
#3 Fix for vnet recreation
#4 Fix for subtenant recreation

* Update CHANGELOG.md

* Update CHANGELOG.md

* Remove unused expandUserInstancesFromIDs

* Remove unused expandUserInstancesFromIDs

* Add generic code used by swagger.json

* Rename flattenGrouoInstancesFromIDs to flattenGroupInstancesFromIDs
